Bug 446052 - Drag&Drop Mails in Kmail does not work using git-master snapshots since 2-3 days
Summary: Drag&Drop Mails in Kmail does not work using git-master snapshots since 2-3 days
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: Git (master)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-24 22:30 UTC by Robby Engelmann
Modified: 2021-11-25 20:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2021-11-24 22:30:28 UTC
SUMMARY
***
Drag&Drop Mails in Kmail does not work using git-master snapshots since 2-3 days
***
STEPS TO REPRODUCE
1. use OpenSuse Unstable = git master snapshots for frameworks+plasma+gear
2.  open kmail, try to move mail to another folder

OBSERVED RESULT
cannot move to another folder, but move is possible if folder is added to favorite folders

EXPECTED RESULT
works as normal

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20211123
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2
Kernel Version: 5.15.3-1-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-10510U CPU @ 1.80GHz
Memory: 31.0 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics

ADDITIONAL INFORMATION
downstream bug: http://bugzilla.opensuse.org/show_bug.cgi?id=1193055
Comment 1 Laurent Montel 2021-11-25 06:18:28 UTC
Git commit b7d1febaa24d0fcf9418ffaff9d27e03b6cb2470 by Laurent Montel.
Committed on 25/11/2021 at 06:17.
Pushed by mlaurent into branch 'master'.

Fix 446052: Drag&Drop Mails in Kmail does not work using git-master snapshots since 2-3 days

M  +1    -1    src/folder/foldertreeview.cpp

https://invent.kde.org/pim/mailcommon/commit/b7d1febaa24d0fcf9418ffaff9d27e03b6cb2470
Comment 2 Robby Engelmann 2021-11-25 20:45:01 UTC
tested ... fixed. great!