Fix 446052: Drag&Drop Mails in Kmail does not work using git-master snapshots since 2-3 days

BUG: 446052